# deltakit

./: .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  mypy.ini  pixi.toml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
deltakit-circuit/: pyproject.toml  ruff.toml
deltakit-circuit/src/deltakit_circuit/: _basic_types.py  _circuit.py  _detector_manipulation.py  _gate_layer.py  _noise_factory.py  _noise_layer.py  _parse_stim.py  _qubit_identifiers.py  _qubit_mapping.py  _stim_identifiers.py  _stim_version_compatibility.py
deltakit-circuit/src/deltakit_circuit/_annotations/: _detector.py  _observable.py  _shift_coordinates.py
deltakit-circuit/src/deltakit_circuit/gates/: __init__.py  _abstract_gates.py  _measurement_gates.py  _one_qubit_gates.py  _reset_gates.py  _two_qubit_gates.py
deltakit-circuit/src/deltakit_circuit/noise_channels/: _abstract_noise_channels.py  _correlated_noise.py  _depolarising_noise.py  _pauli_noise.py
deltakit-circuit/tests/: test_basic_types.py  test_circuit.py  test_detector_manipulation.py  test_gate_layer.py  test_qubit_identifiers.py
deltakit-circuit/tests/test_annotations/: test_detector.py  test_observable.py  test_shift_coordinates.py
deltakit-circuit/tests/test_gates/: test_measurement_gates.py  test_one_qubit_gates.py  test_reset_gates.py  test_two_qubit_gates.py
deltakit-circuit/tests/test_noise_channels/: test_correlated_noise.py  test_depolarising_noise.py  test_leakage_noise.py  test_pauli_noise.py
deltakit-circuit/tests/test_stim_parsing/: test_gate_parsing.py  test_noise_parsing.py  test_tag_parsing.py
deltakit-core/: pyproject.toml  ruff.toml
deltakit-core/src/deltakit_core/: deprecation.py
deltakit-core/src/deltakit_core/data_formats/: __init__.py  _b801_parsers.py  _measurements.py
deltakit-core/src/deltakit_core/decoding_graphs/: __init__.py  _data_qubits.py  _decoding_graph.py  _decoding_graph_tools.py  _dem_parsing.py  _explained_dem_parsing.py  _syndromes.py  _weighted_graphs.py
deltakit-core/tests/unit/: test_deprecation.py
deltakit-core/tests/unit/data_formats/: test_b8_parser.py
deltakit-core/tests/unit/decoding_graphs/: test_data_qubits.py  test_decoding_hyper_multigraph.py  test_decoding_hypergraph.py  test_dem_parsing.py  test_detector_records.py  test_explained_dem_parsing.py  test_hypergraph_decomposition.py  test_nx_decoding_graphs.py  test_parsing_dem_to_graphs.py  test_syndromes.py  test_weighted_graphs.py
deltakit-decode/: pyproject.toml
deltakit-decode/src/deltakit_decode/: _abstract_matching_decoders.py  _base_reporter.py  _mwpm_decoder.py
deltakit-decode/src/deltakit_decode/analysis/: _decoder_manager.py  _decoding_circuits.py  _empirical_decoding_error_distribution.py  _matching_decoder_managers.py  _run_all_analysis_engine.py
deltakit-decode/src/deltakit_decode/noise_sources/: _generic_noise_sources.py  _matching_noise_sources.py  _stim_noise_sources.py
deltakit-decode/src/deltakit_decode/utils/: _decoding_graph_visualiser.py  _derivation_tools.py  _derivation_tools_pij.py  _graph_circuit_helpers.py  _pij_visualiser.py
deltakit-decode/tests/analysis/: test_empirical_decoding_error_distribution.py  test_matching_decoder_managers.py  test_run_all_analysis_engine.py
deltakit-decode/tests/noise_sources/: test_noise_sources_error_generator.py  test_stim_noise_sources.py
deltakit-decode/tests/unit/utils/: test_derivation_tools_pij.py  test_parse_stim_circuit.py  test_pij_visualiser.py
deltakit-explorer/: pyproject.toml  ruff.toml
deltakit-explorer/src/deltakit_explorer/: _cloud_decoders.py
deltakit-explorer/src/deltakit_explorer/_api/: _api_client.py  _api_v2_client.py  _client.py  _gql_client.py
deltakit-explorer/src/deltakit_explorer/_utils/: _decorators.py
deltakit-explorer/src/deltakit_explorer/analysis/: __init__.py  _analysis.py  _lambda.py  _leppr.py  _quops.py  lambda_.py
deltakit-explorer/src/deltakit_explorer/codes/: _bivariate_bicycle_code.py  _logicals.py  _repetition_code.py  _stabiliser.py
deltakit-explorer/src/deltakit_explorer/codes/_css/: _css_code.py  _css_code_experiment_circuit.py  _css_stage.py  _detectors.py  _experiment_circuit.py  _observables.py  _stabiliser_code.py  _stabiliser_helper_functions.py
deltakit-explorer/src/deltakit_explorer/codes/_planar_code/: __init__.py  _planar_code.py  _rotated_planar_code.py  _unrotated_planar_code.py  _unrotated_toric_code.py
deltakit-explorer/src/deltakit_explorer/codes/_schedules/: __init__.py  _schedule_order.py
deltakit-explorer/src/deltakit_explorer/qpu/: _native_gate_set.py  _qpu.py
deltakit-explorer/src/deltakit_explorer/qpu/_circuits/: __init__.py  _circuit_functions.py  _parallelise_circuits.py  _tableau_compile_functions.py  _tableau_functions.py
deltakit-explorer/src/deltakit_explorer/qpu/_noise/: __init__.py  _leakage_noise_profiles.py  _noise_parameters.py  _phenomenological_noise.py  _physical_noise.py  _sd6_noise_model.py  _si1000_noise.py  _toy_noise.py
deltakit-explorer/src/deltakit_explorer/simulation/: _stim_simulation.py
deltakit-explorer/src/deltakit_explorer/types/: _types.py
deltakit-explorer/tests/: conftest.py
deltakit-explorer/tests/analysis/: test_analysis.py  test_lambda.py  test_leppr.py  test_quops.py
deltakit-explorer/tests/circuit_generation/: test_circuit_generation.py
deltakit-explorer/tests/decoding/: test_cloud_decoder.py
deltakit-explorer/tests/logging/: test_logging.py
deltakit-explorer/tests/unit/circuits/: test_circuit_functions.py  test_tableau_functions.py
deltakit-explorer/tests/unit/codes/: test_bivariate_bicycle_code.py  test_repetition_code.py
deltakit-explorer/tests/unit/css/: _data_css_stage.py  _data_css_stage_full_stage.py  test_css_stage.py
deltakit-explorer/tests/unit/noise_models/: test_noise_parameters.py  test_physical_noise.py  test_sd6_noise.py
deltakit-explorer/tests/unit/qpus/: test_native_gate_set.py  test_qpu.py
deltakit-explorer/tests/utils/: test_decorators.py
deltakit-explorer/tests/visualisation/: test_visualisation.py
docs/: index.rst  (+2 more)
(+16 files in other folders)
