[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit"
version = "0.5.1"
description = "Deltakit SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]

dependencies = [
    "deltakit_circuit",
    "deltakit_core",
    "deltakit_decode",
    "deltakit_explorer",
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[dependency-groups]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-skip-slow",
    "pytest-testmon",
    "pytest-lazy-fixtures",
]
lint = ["mypy", "ruff>=0.14", "typos"]
docs = [
    "myst_nb",
    "sphinxawesome-theme",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "pip-licenses",
    "sphinx-design",
    "sphinx-autobuild",
    "myst-parser",
    "vale",
    "jupytext",
    "jupyter",
    "ipykernel"
]
security = ["bandit", "ochrona", "pip-audit"]
build = ["build"]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "security"},
    {include-group = "build"},
    # other
    "pre-commit",
    "ipykernel",
    "validate-pyproject",
    "python-semantic-release",
    "tomlkit",
    "deptry",
    # [dev] dependencies for deltakit subpackages
    "deltakit_explorer[dev]"
]

# for mypy configuration, see `mypy.ini`.
# for ruff configuration, see `ruff.toml`

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  # Note: the below line ignore a specific warning about changes in multiprocessing.
  # This warning is only raised by a few tests in deltakit-decode. This is a temporary
  # fix.
  "ignore:This process .* is multi-threaded, use of fork\\(\\) may lead to deadlocks in the child.:DeprecationWarning"
]

[tool.bandit]
# './tools/vale.py' is for `pixi run bandit`; 'tools/vale.py' is for pre-commit
exclude_dirs = ['.github', '.pixi', '.tox', '.venv', './tools/vale.py', 'tools/vale.py']
skips = ['B101', 'B311']  # B101 is just use of `assert`; 'B311' is use of random module

[tool.typos.default]
locale = 'en-gb'

[tool.typos.default.extend-words]
# Don't correct "iy" - often used in the context of "probability of an IY operation"
iy = "iy"
anc = "anc"
BA = "BA"
youre = "you're"
distribtuion = "distribution"
interm = "interm"
ket = "ket"
ND = "ND"  # part of NDArray
Alise = "Alise"
DEPOLARIZE = "DEPOLARIZE"
depolarization = "depolarization"
Authorization = "Authorization" # Web-related field.
color = "color" # Used in matplotlib and stim APIs.
colors = "colors"
optimize = "optimize" # scipy.optimize
ax = "ax" # Typical naming for matplotlib Axes instances.
center = "center"
stabilizer = "stabilizer"
stabilizers = "stabilizers"
synchronize = "synchronize" # multiprocessing import
neighbors = "neighbors"

[tool.typos.files]
# Paths/patterns to exclude from spell checking
extend-exclude = ["docs/styles", "**/LICENSE", "**/*.html", "licenses.confluence"]

[tool.deptry]
ignore = ["DEP003"]

[tool.deptry.per_rule_ignores]
DEP001 = ["tests"]
DEP002 = ['deltakit', 'deltakit_explorer', 'deltakit_circuit', 'deltakit_core', 'deltakit_decode',
          'pytest-cov', 'pytest-asyncio', 'pytest-skip-slow', 'pytest-testmon',
          'mypy', 'ruff', 'isort',
          'myst_nb', 'sphinxawesome-theme', 'sphinx-autodoc-typehints', 'sphinx-design',
          'sphinx-copybutton', 'sphinx-autobuild', 'myst-parser', 'jupytext', 'jupyter',
          'pip-licenses', 'build', 'bandit', 'ochrona', 'pip-audit', 'ipykernel',
          'validate-pyproject', 'typos', 'vale',
          'python-semantic-release', 'pre-commit', 'deptry']

[tool.semantic_release]
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "*"

[tool.semantic_release.branches.other]
match = ".*"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''task(?:\([^)]*?\))?: .+''',
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''tests?(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''release(?:\([^)]*?\))?: .+''',
    '''dev(?:\([^)]*?\))?: .+''',
    '''Initial [Cc]ommit.*''',
]
mode = "update"

[tool.semantic_release.commit_parser_options]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "tests", "release", "dev"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "tests", "release", "dev"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
deltakit-core = { path = "./deltakit-core/", develop = true }
deltakit-circuit = { path = "./deltakit-circuit/", develop = true }
deltakit-decode = { path = "./deltakit-decode/", develop = true }
deltakit-explorer = { path = "./deltakit-explorer/", develop = true }

[tool.hatch.envs.default]
pre-install-commands = [
  "pip install -e ./deltakit-core",
  "pip install -e ./deltakit-circuit",
  "pip install -e ./deltakit-decode",
  "pip install -e ./deltakit-explorer",
]
features = ["dev"]

[tool.uv.workspace]
members = [
  "deltakit-core",
  "deltakit-circuit",
  "deltakit-decode",
  "deltakit-explorer",
]

[tool.uv.sources]
deltakit-core     = { workspace = true }
deltakit-circuit  = { workspace = true }
deltakit-decode   = { workspace = true }
deltakit-explorer = { workspace = true }
