[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit"
version = "0.5.1"
description = "Deltakit SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]

dependencies = [
  "deltakit_circuit",
  "deltakit_core",
  "deltakit_decode",
  "deltakit_explorer",
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[dependency-groups]
tests_extras = ["matplotlib", "numpy", "pandas", "stim"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-skip-slow",
  { include-group = "tests_extras" },
]
lint = ["mypy", "ruff>=0.14", "typos", "deptry"]
docs = [
  "myst_nb",
  "sphinxawesome-theme",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "pip-licenses",
  "sphinx-design",
  "sphinx-autobuild",
  "myst-parser",
  "vale",
  "jupytext",
  "jupyter",
  "ipykernel",
]
security = ["bandit", "ochrona", "pip-audit"]
build = ["build"]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "docs" },
  { include-group = "security" },
  { include-group = "build" },
  # other
  "pre-commit",
  "validate-pyproject",
  "python-semantic-release",
]

[tool.uv.workspace]
members = [
  "deltakit-core",
  "deltakit-circuit",
  "deltakit-decode",
  "deltakit-explorer",
]

[tool.uv.sources]
deltakit-core = { workspace = true }
deltakit-circuit = { workspace = true }
deltakit-decode = { workspace = true }
deltakit-explorer = { workspace = true }

[tool.mypy]
files = "src/**/*.py"

# for ruff configuration, see `ruff.toml`

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]

[tool.bandit]
# './tools/vale.py' is for `pixi run bandit`; 'tools/vale.py' is for pre-commit
exclude_dirs = [
  '.github',
  '.pixi',
  '.tox',
  '.venv',
  './tools/vale.py',
  'tools/vale.py',
]
skips = [
  'B101',
  'B311',
] # B101 is just use of `assert`; 'B311' is use of random module

[tool.typos.default]
locale = 'en-gb'

[tool.typos.default.extend-words]
# Don't correct "iy" - often used in the context of "probability of an IY operation"
iy = "iy"
anc = "anc"
BA = "BA"
youre = "you're"
distribtuion = "distribution"
interm = "interm"
ket = "ket"
ND = "ND"                         # part of NDArray
Alise = "Alise"
DEPOLARIZE = "DEPOLARIZE"
depolarization = "depolarization"
Authorization = "Authorization"   # Web-related field.
color = "color"                   # Used in matplotlib and stim APIs.
colors = "colors"
optimize = "optimize"             # scipy.optimize
ax = "ax"                         # Typical naming for matplotlib Axes instances.
center = "center"
stabilizer = "stabilizer"
stabilizers = "stabilizers"
synchronize = "synchronize"       # multiprocessing import
neighbors = "neighbors"

[tool.typos.files]
# Paths/patterns to exclude from spell checking
extend-exclude = [
  "docs/styles",
  "**/LICENSE",
  "**/*.html",
  "licenses.confluence",
]

[tool.semantic_release]
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "*"

[tool.semantic_release.branches.other]
match = ".*"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''task(?:\([^)]*?\))?: .+''',
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''tests?(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''release(?:\([^)]*?\))?: .+''',
  '''dev(?:\([^)]*?\))?: .+''',
  '''Initial [Cc]ommit.*''',
]
mode = "update"

[tool.semantic_release.commit_parser_options]
other_allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "tests",
  "release",
  "dev",
]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "tests",
  "release",
  "dev",
]
