[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-circuit"
version = "0.5.1"
description = "Deltakit (component deltakit-circuit)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]
dependencies = ["stim>=1.9.0", "typing-extensions"]

[dependency-groups]
test = ["pytest", "pytest-cov", "pytest-skip-slow"]
lint = ["mypy", "ruff>=0.14", "typos", "deptry"]
security = ["bandit", "ochrona", "pip-audit"]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "security" },
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[tool.deptry]
known_first_party = ["deltakit_circuit"]

[tool.mypy]
files = "src/**/*.py"
# The below list of disabled checks should eventually be empty.
disable_error_code = "dict-item,misc,arg-type,return-value,union-attr,index,attr-defined,call-overload"

[[tool.mypy.overrides]]
module = ["stim"]
follow_untyped_imports = true
