[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-decode"
version = "0.5.1"
description = "Deltakit (component deltakit-decode)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]
dependencies = [
  "numpy",
  "networkx",
  "seaborn",
  "matplotlib",
  "nbformat",
  "plotly",
  "pymatching",
  "stim",
  "pathos>=0.3.4",
  "pandas>=2.0",
  "typing_extensions",
  "types-networkx",
  "types-requests",
  "types-tqdm",
  "typing-extensions",
  "tqdm",
  "pandas-stubs",
  "plotly-stubs",
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"
