[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-decode"
version = "0.5.1"
description = "Deltakit (component deltakit-decode)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]
dependencies = [
  "deltakit_circuit",
  "deltakit_core",
  "numpy",
  "networkx",
  "seaborn",
  "matplotlib",
  "nbformat",
  "plotly",
  "pymatching",
  "stim",
  "pathos>=0.3.4",
  "pandas>=2.0",
  "typing-extensions",
  "tqdm",
]

[dependency-groups]
tests = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-skip-slow",
  "pytest-lazy-fixtures",
]
stubs = [
  "types-networkx",
  "types-requests",
  "types-tqdm",
  "pandas-stubs",
  "plotly-stubs",
  "types-seaborn",
]
lint = ["mypy", "ruff>=0.14", "typos", "deptry", { include-group = "stubs" }]
security = ["bandit", "ochrona", "pip-audit"]
build = ["build"]
dev = [
  { include-group = "tests" },
  { include-group = "lint" },
  { include-group = "security" },
  { include-group = "build" },
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
"Bug Tracker" = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[tool.deptry]
known_first_party = ["deltakit_decode"]

[tool.mypy]
files = "src/**/*.py"
# The below list of disabled checks should eventually be empty.
disable_error_code = "arg-type,assignment,attr-defined,name-defined,index,misc"

[[tool.mypy.overrides]]
module = ["stim", "pathos", "pathos.pools", "pymatching"]
follow_untyped_imports = true
